--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
         </ul>
         <span class="navbar-text">
-          <a data-toggle="modal" data-target="#loginModal">
-            <span class="fa fa-sign-in"></span> Login</a>
+          <!-- <a data-toggle="modal" data-target="#loginModal"> -->
+            <a id="openLogin">
+            <span class="fa fa-sign-in" ></span> Login</a>
         </span>
       </div>            
     </div>
@@ -43,7 +44,8 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login </h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
+                    <button type="button" class="close" >&times;</button>
                 </div>
                 <div class="modal-body">
                     <form>
@@ -65,7 +67,8 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <!-- <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button> -->
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" id="closeLogin">Cancel</button>
                             <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
                         </div>
                     </form>
@@ -87,7 +90,8 @@
               <div class="col-12 col-sm-3 align-self-center">
               <!-- <a role="button" class="btn btn-block nav-link btn-warning"
               data-toggle="tooltip" data-html="true"  title="Or Call us at<br><strong>+852 12345678</strong>" data-placement="bottom" href="#reserve">Reserve Table</a> -->
-              <a data-toggle="modal" data-target="#reserveModal" role="button" class="btn btn-block nav-link btn-warning">Reserve Table</a>
+              <!-- <a data-toggle="modal" data-target="#reserveModal" role="button" class="btn btn-block nav-link btn-warning">Reserve Table</a> -->
+              <a role="button" class="btn btn-block nav-link btn-warning" id="openReserve">Reserve Table</a>
               </div>
               </div>
           </div>
@@ -100,7 +104,8 @@
       <div class="modal-content">
         <div class="modal-header">
           <h3 class ="modal-title">Reserve a Table </h3>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
+          <button type="button" class="close" id="closeReserve">&times;</button>
         </div>
         
         <div class="modal-body">
@@ -161,7 +166,8 @@
 
             <div class="form-group row">
               <div class="col-md-9 offset-3 col-sm-12">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button> -->
+                <button type="button" class="btn btn-secondary" >Cancel</button>
                 <button type="submit" class="btn btn-primary">Reserve</button></dd>
               </div>
             </div>
@@ -182,35 +188,35 @@
                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
             </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/buffet.png" class="d-block img-fluid" alt="Grand Buffet">
+            <div class="carousel-caption d-none d-md-block">
+              <h2>Weekend Grand Buffet<span class="badge badge-danger">NEW</span></h2>
+              <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
             </div>
-            <div class="carousel-item">
-                <img src="img/buffet.png" class="d-block img-fluid" alt="Grand Buffet">
+          </div>
+          <div class="carousel-item">
+              <img src="img/alberto.png" class="d-block img-fluid"  alt="Alberto Somayya">
               <div class="carousel-caption d-none d-md-block">
-                <h2>Weekend Grand Buffet<span class="badge badge-danger">NEW</span></h2>
-                  <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-              </div>
+              <h2 class="mt-0">Alberto Somayya</h2>
+              <h4>Executive Chef</h4>
+               <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide 
+                International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences.
+               </p>
             </div>
-            <div class="carousel-item">
-                <img src="img/alberto.png" class="d-block img-fluid"  alt="Alberto Somayya">
-                <div class="carousel-caption d-none d-md-block">
-                <h2 class="mt-0">Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                 <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide 
-                  International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences.
-                 </p>
-              </div>
-            </div>
-            <ol class="carousel-indicators">
-              <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#mycarousel" data-slide-to="1"></li>
-              <li data-target="#mycarousel" data-slide-to="2"></li>
-            </ol>
-            <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
-              <span class="carousel-control-next-icon"></span>
-            </a>
+          </div>
+          <ol class="carousel-indicators">
+            <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#mycarousel" data-slide-to="1"></li>
+            <li data-target="#mycarousel" data-slide-to="2"></li>
+          </ol>
+          <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
           </div>
           <div class="btn-group" id="carouselButton">
             <button class="btn btn-danger btn-sm" id="carouselButton">
@@ -262,7 +268,7 @@
       </div>
 
       <div class="row row-content align-items-center">
-           <div class="col-12 col-sm-4 order-sm-last col-md-3">
+          <div class="col-12 col-sm-4 order-sm-last col-md-3">
               <h3>Meet our Culinary Specialists</h3>
           </div>
           <div class="col col-sm order-sm-first col-md">
@@ -347,7 +353,21 @@
         $("#carouselButton").children("span").addClass('fa-pause');                  
       }
     });
-  }
+
+    $('#openLogin').click(function(){
+      $('#loginModal').modal('show');
+    });
+    $('#closeLogin').click(function(){
+      $('#loginModal').modal('hide');
+    });
+    $('#openReserve').click(function(){
+      $('#reserveModal').modal('show');
+    });
+    $('#closeReserve').click(function(){
+      $('#reserveModal').modal('hide');
+    });
+  });
+      
   </script>
 </body>
 
